add_library(Analyses
    AlgorithmLibraryAnalysis.cpp
    ClassInstantiationAnalysis.cpp
    ClassMethodCallAnalysis.cpp
    ConcurrencySupportLibraryAnalysis.cpp
    ConcurrencySupportLibraryMethodAnalysis.cpp
    ConstexprAnalysis.cpp
    ContainerLibAnalysis.cpp
    CyclomaticComplexityAnalysis.cpp
    FunctionParameterAnalysis.cpp
    LoopDepthAnalysis.cpp
    LoopKindAnalysis.cpp
    MoveSemanticsAnalysis.cpp
    OMPExecutableDirectiveAnalysis.cpp
    TemplateInstantiationAnalysis.cpp
    TemplateParameterAnalysis
    UsingAnalysis.cpp
    UtilityLibAnalysis.cpp
    VariableTemplateAnalysis.cpp
)
