add_library(Analyses
    AlgorithmLibraryAnalysis.cpp
    AtomicMemoryOrderAnalysis.cpp
    ClassInstantiationAnalysis.cpp
    ClassMethodCallAnalysis.cpp
    ClassMethodCallTranslationUnitAnalysis.cpp
    ConcurrencySupportLibraryAnalysis.cpp
    ConcurrencySupportLibraryMethodAnalysis.cpp
    ConcurrencySupportLibraryMethodTranlationUnitAnalysis.cpp
    ConstexprAnalysis.cpp
    ContainerLibAnalysis.cpp
    CyclomaticComplexityAnalysis.cpp
    DataContainerAnalysis.cpp
    DataContainerTranslationUnitAnalysis.cpp
    OMPExecutableDirectiveTranslationUnitAnalysis.cpp
    STLMutexScopeAnalysis.cpp
    ScopeAnalysis.cpp
    FunctionParameterAnalysis.cpp
    LoopDepthAnalysis.cpp
    LoopKindAnalysis.cpp
    MoveSemanticsAnalysis.cpp
    OMPExecutableDirectiveAnalysis.cpp
    TemplateInstantiationAnalysis.cpp
    TemplateParameterAnalysis
    UsingAnalysis.cpp
    UtilityLibAnalysis.cpp
    VariableTemplateAnalysis.cpp
)
